--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -63,6 +63,11 @@
                 android:summary="@string/doze_summary"
                 android:persistent="false" />
 
+        <ListPreference
+                android:key="lcd_density"
+                android:title="@string/lcd_density"
+                android:persistent="false" />
+
         <com.android.settings.WarnedListPreference
                 android:key="font_size"
                 android:title="@string/title_font_size"
@@ -83,3 +88,4 @@
                 android:fragment="com.android.settings.wfd.WifiDisplaySettings" />
 
 </PreferenceScreen>
+
