--- a/res/xml/development_prefs.xml
+++ b/res/xml/development_prefs.xml
@@ -68,7 +68,12 @@
     <SwitchPreference
         android:key="enable_quickboot"
         android:title="@string/enable_quickboot_title"
-        android:summary="@string/enable_quickboot_summary" />
+        android:summary="@string/enable_quickboot_summary"/>
+        
+    <SwitchPreference
+	android:key="heads_up_ticker_exp"
+        android:title="@string/heads_up_ticker_exp_title"
+        android:summary="@string/heads_up_ticker_exp_summary" />
 
     <PreferenceCategory android:key="debug_debugging_category"
             android:title="@string/debug_debugging_category">
