--- a/res/xml/device_info_settings.xml
+++ b/res/xml/device_info_settings.xml
@@ -140,8 +140,8 @@
                 android:title="@string/build_number"
                 android:summary="@string/device_info_default"/>
 
-	<!-- Device EF version -->
-        <Preference android:key="pa_version"
+	<!-- Device EF-Aosp version -->
+        <Preference android:key="ef_version"
                  style="?android:preferenceInformationStyle"
                 android:title="@string/ef_version"
                 android:summary="@string/ef_version_default" />
