--- a/res/xml/device_info_settings.xml
+++ b/res/xml/device_info_settings.xml
@@ -140,17 +140,11 @@
                 android:title="@string/build_number"
                 android:summary="@string/device_info_default"/>
 
-	<!-- Device EF-Aosp version -->
+	<!-- Device EF-Aosp Build Info -->
         <Preference android:key="ef_version"
                  style="?android:preferenceInformationStyle"
                 android:title="@string/ef_version"
                 android:summary="@string/ef_version_default" />
-
-	<!-- EF-Aosp build date -->
-        <Preference android:key="build_date"
-                style="?android:preferenceInformationStyle"
-                android:title="@string/build_date"
-                android:summary="@string/build_date_default" />
 
         <!-- SELinux status information -->
         <Preference android:key="selinux_status"
