--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -1319,6 +1319,7 @@
         <item>@string/status_bar_battery_style_icon_portrait</item>
         <item>@string/status_bar_battery_style_icon_landscape</item>
         <item>@string/status_bar_battery_style_circle</item>
+	<item>@string/status_bar_battery_style_circle_dotted</item>
         <item>@string/status_bar_battery_style_text</item>
         <item>@string/status_bar_battery_style_hidden</item>
     </string-array>
@@ -1327,6 +1328,7 @@
         <item>0</item>
         <item>5</item>
         <item>2</item>
+	<item>3</item>
         <item>6</item>
         <item>4</item>
     </string-array>
