--- a/res/xml/status_bar_settings.xml
+++ b/res/xml/status_bar_settings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Copyright (C) 2015 The Purified Rom Project
+<!-- Copyright (C) 2015 The LF-Aosp Rom Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -14,29 +14,26 @@
      limitations under the License.
 -->
 
-<PreferenceScreen
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
-        xmlns:purified="http://schemas.android.com/apk/res-auto" 
-        android:title="@string/battery_settings_title">
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+    android:title="@string/status_bar_title" >
 
-    <PreferenceCategory
-        android:key="category_status_bar_battery"
-        android:title="@string/status_bar_battery_title">
+	<PreferenceCategory
+        android:key="status_bar_general_category"
+        android:title="@string/status_bar_general_category" >
 
         <ListPreference
             android:key="status_bar_show_battery_percent"
             android:title="@string/status_bar_battery_percentage_title"
             android:dialogTitle="@string/status_bar_battery_percentage_title"
             android:entries="@array/status_bar_battery_percentage_entries"
-            android:entryValues="@array/status_bar_battery_percentage_values" >
-<ListPreference
+            android:entryValues="@array/status_bar_battery_percentage_values" />
+
+	<ListPreference
         android:key="status_bar_battery_style"
         android:title="@string/status_bar_battery_style_title"
         android:dialogTitle="@string/status_bar_battery_style_title"
         android:entries="@array/status_bar_battery_style_entries"
-        android:entryValues="@array/status_bar_battery_style_values" >
-
-    </PreferenceCategory>
+        android:entryValues="@array/status_bar_battery_style_values" />
+	</PreferenceCategory>
 
 </PreferenceScreen>
