--- a/res/xml/date_time_prefs.xml
+++ b/res/xml/date_time_prefs.xml
@@ -52,23 +52,8 @@
         android:title="@string/date_time_24hour"
         />
 
-<PreferenceCategory
-        android:key="status_bar_general_category"
-        android:title="@string/status_bar_general_category" >
-
-        <ListPreference
-            android:key="status_bar_show_battery_percent"
-            android:title="@string/status_bar_battery_percentage_title"
-            android:dialogTitle="@string/status_bar_battery_percentage_title"
-            android:entries="@array/status_bar_battery_percentage_entries"
-            android:entryValues="@array/status_bar_battery_percentage_values" />
-
-	<ListPreference
-        android:key="status_bar_battery_style"
-        android:title="@string/status_bar_battery_style_title"
-        android:dialogTitle="@string/status_bar_battery_style_title"
-        android:entries="@array/status_bar_battery_style_entries"
-        android:entryValues="@array/status_bar_battery_style_values" />
-	</PreferenceCategory>
-
+<PreferenceScreen
+	        android:key="status_bar_general_category"
+	        android:fragment="com.android.settings.simpleaosp.StatusBarSettings"
+	        android:title="@string/status_bar_title" />
 </PreferenceScreen>
