Create Advanced settings with.. Lcd settings, Heads Up Settings, Battery Style Settings and other
Change-Id: Ice38bab6a260e6e67d6720837a9f4852f32b3e0d

--- a/res/xml/dashboard_categories.xml
+++ b/res/xml/dashboard_categories.xml
@@ -83,6 +83,20 @@
                     android:targetClass="com.lovejoy777.rroandlayersmanager.menu" />
       </dashboard-tile>
 
+    <!-- Personalization -->
+    <dashboard-category
+            android:id="@+id/personalization_section"
+            android:title="@string/header_category_personalization" >
+
+        <!-- Parallax settings -->
+        <dashboard-tile
+                android:id="@+id/advanced_options_settings"
+                android:title="@string/advanced_options_title"
+                android:fragment="com.android.settings.simpleaosp.AdditionalSettings"
+                android:icon="@drawable/ic_settings_buttons" />
+
+   </dashboard-category>
+
     </dashboard-category>
 
     <!-- DEVICE -->
