--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -1343,6 +1343,7 @@
         <item>0</item>
         <item>1</item>
         <item>2</item>
+	</string-array>
 
     <!--- Navigation bar -->
     <!--- Navigation bar height -->
