--- a/res/xml/date_time_prefs.xml
+++ b/res/xml/date_time_prefs.xml
@@ -49,11 +49,5 @@
         />
 
     <SwitchPreference android:key="24 hour"
-        android:title="@string/date_time_24hour"
-        />
-
-<PreferenceScreen
-	        android:key="status_bar_general_category"
-	        android:fragment="com.android.settings.simpleaosp.StatusBarSettings"
-	        android:title="@string/status_bar_title" />
+        android:title="@string/date_time_24hour" />
 </PreferenceScreen>
