--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -95,7 +95,6 @@
 	<ListPreference
                 android:key="lcd_density"
                 android:title="@string/lcd_density"
-                android:persistent="false"
-		settings:advanced="true" />
+                android:persistent="false" />
 </PreferenceScreen>
 
