--- a/res/xml/advanced_options.xml
+++ b/res/xml/advanced_options.xml
@@ -32,7 +32,7 @@
 
 	<PreferenceScreen
 	        android:key="navigation_bar"
-	        android:fragment="com.android.settings.simpleaosp.NavigationBarSettings"
+	        android:fragment="com.android.settings.simpleaosp.AdvancedOptions"
 	        android:title="@string/navigation_bar_title" />
 
         <PreferenceScreen 
