--- a/res/xml/dashboard_categories.xml
+++ b/res/xml/dashboard_categories.xml
@@ -71,24 +71,22 @@
                 android:fragment="com.android.settings.WirelessSettings"
                 android:icon="@drawable/ic_settings_more"
                 />
-
-    <!-- Personalization -->
-    <dashboard-category
-            android:id="@+id/personalization_section"
-            android:title="@string/header_category_personalization" >
-
-        <!-- Parallax settings -->
-        <dashboard-tile
-                android:id="@+id/advanced_options_settings"
-                android:title="@string/advanced_options_title"
-                android:fragment="com.android.settings.simpleaosp.AdditionalSettings"
-                android:icon="@drawable/ic_settings_buttons" />
-
    </dashboard-category>
 
-    </dashboard-category>
-
     <!-- DEVICE -->
+<!-- Personalization -->
+	<dashboard-category
+	android:id="@+id/personalization_section"
+            android:title="@string/header_category_personalization" >
+
+        <!-- Ef-Aosp Settings -->
+        <dashboard-tile
+                android:id="@+id/ef_aosp_settings"
+                android:title="@string/ef_aosp_settings_title"
+                android:fragment="com.android.settings.simpleaosp.AdditionalSettings"
+                android:icon="@drawable/ic_settings_buttons" />
+	</dashboard-category>
+
     <dashboard-category
             android:id="@+id/device_section"
             android:title="@string/header_category_device" >
@@ -97,15 +95,14 @@
         <dashboard-tile
             android:id="@+id/device_specific_gesture_settings"
             android:title="@string/gesture_settings_title"
-            android:icon="@drawable/ic_settings_home">
+            android:icon="@drawable/ic_settings_buttons">
             <intent
                 android:action="com.cyanogenmod.action.LAUNCH_TOUCHSCREEN_GESTURE_SETTINGS"
                 android:targetPackage="com.cyanogenmod.settings.device"
                 android:targetClass="com.cyanogenmod.settings.device.TouchscreenGestureSettings" />
         </dashboard-tile>
 
-
-	<!-- BitSyko Layers App -->
+  	<!-- BitSyko Layers App -->
         <dashboard-tile
                 android:id="@+id/bitsyko_layers"
                 android:icon="@drawable/ic_bitsyko_layers"
