--- a/res/xml/advanced_options.xml
+++ b/res/xml/advanced_options.xml
@@ -22,7 +22,7 @@
 
 <PreferenceScreen
 	        android:key="status_bar_general_category"
-	        android:fragment="com.android.settings.simpleaosp.AdvancedOptions"
+	        android:fragment="com.android.settings.simpleaosp.StatusBarSettings"
 	        android:title="@string/status_bar_title" />
 
 <ListPreference
@@ -32,7 +32,7 @@
 
 	<PreferenceScreen
 	        android:key="navigation_bar"
-	        android:fragment="com.android.settings.simpleaosp.AdvancedOptions"
+	        android:fragment="com.android.settings.simpleaosp.NavigationBarSettings"
 	        android:title="@string/navigation_bar_title" />
 
         <PreferenceScreen 
