--- a/res/xml/device_info_settings.xml
+++ b/res/xml/device_info_settings.xml
@@ -113,4 +113,10 @@
                 android:title="@string/selinux_status"
                 android:summary="@string/selinux_status_enforcing"/>
 
+	<!-- Lanern-Aosp build date -->
+        <Preference android:key="build_date"
+                style="?android:preferenceInformationStyle"
+                android:title="@string/build_date"
+                android:summary="@string/build_date_default" />
+
 </PreferenceScreen>
