--- a/res/xml/device_info_settings.xml
+++ b/res/xml/device_info_settings.xml
@@ -101,6 +101,12 @@
                 android:title="@string/kernel_version"
                 android:summary="@string/device_info_default"/>
 
+	<!-- Device Lantern-Aosp version -->
+        <Preference android:key="l_version"
+                 style="?android:preferenceInformationStyle"
+                 android:title="@string/l_version"
+                 android:summary="@string/l_version_default" />
+
         <!-- Detailed build version -->
         <Preference android:key="build_number"
                 style="?android:preferenceInformationStyle"
@@ -112,11 +118,5 @@
                 style="?android:preferenceInformationStyle"
                 android:title="@string/selinux_status"
                 android:summary="@string/selinux_status_enforcing"/>
-
-	<!-- Lanern-Aosp build date -->
-        <Preference android:key="build_date"
-                style="?android:preferenceInformationStyle"
-                android:title="@string/build_date"
-                android:summary="@string/build_date_default" />
 
 </PreferenceScreen>
